--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lucide-react": "^0.563.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "@types/node": "^22.14.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.17",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
